[package]
name = "rv32jit"
version = "0.1.0"
authors = ["Tommy van der Vorst <tommy@pixelspark.nl>"]
edition = "2021"

[features]
#pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-hal = "0.2"
embedded-svc = "0.23"
esp-idf-svc = "^0.43.4"
esp-idf-hal = "0.39.3"
esp-idf-sys = { version = "^0.31", features = ["binstart"] }
rv32assembler = { path = "../rv32assembler" }

[build-dependencies]
embuild = "0.29"
anyhow = "1"
