[package]
name = "rv32jit"
version = "0.1.0"
authors = ["Tommy van der Vorst <tommy@pixelspark.nl>"]
edition = "2021"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.1", default-features = false }
rv32assembler = { path = "../rv32assembler" }
esp-idf-sys = "0.33.5"

[build-dependencies]
anyhow = "1.0.75"
embuild = "0.31.3"
